FBSEditor/Grammar/Template/TemplateParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TemplateParser.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class TemplateParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		OPEN=1, TEXT=2, CLOSE=3, INTEGER=4, FLOAT=5, BOOL=6, SET_DIV=7, SET_MUL=8, 
		SET_MOD=9, SET_ADD=10, SET_SUB=11, SET_SHIFTL=12, SET_SHIFTR=13, SET_BIT_AND=14, 
		SET_BIT_XOR=15, SET_BIT_OR=16, STRING=17, BRACE_L=18, BRACE_R=19, INCREMENT=20, 
		DECREMENT=21, MUL=22, DIV=23, MOD=24, ADD=25, SUB=26, PARENTHESES_L=27, 
		PARENTHESES_R=28, DOT=29, COMMA=30, NOTEQUAL=31, LOGIC_NOT=32, BIT_INVERT=33, 
		SHIFTL=34, SHIFTR=35, LESS=36, LESSEQUAL=37, GREATER=38, GREATEREQUAL=39, 
		EQUAL=40, LOGIC_AND=41, LOGIC_OR=42, BIT_AND=43, BIT_OR=44, BIT_XOR=45, 
		SET=46, COLON=47, SEMICOLON=48, VAR=49, IF=50, SWITCH=51, CASE=52, WHILE=53, 
		DO=54, FOR=55, FOREACH=56, IN=57, BREAK=58, CONTINUE=59, RETURN=60, IDENT=61, 
		COMMENT=62, WS=63;
	public const int
		RULE_document = 0, RULE_code = 1, RULE_text = 2, RULE_var = 3, RULE_if = 4, 
		RULE_switch = 5, RULE_while = 6, RULE_dowhile = 7, RULE_for = 8, RULE_foreach = 9, 
		RULE_expr = 10, RULE_exprCall = 11, RULE_exprProp = 12, RULE_exprValue = 13;
	public static readonly string[] ruleNames = {
		"document", "code", "text", "var", "if", "switch", "while", "dowhile", 
		"for", "foreach", "expr", "exprCall", "exprProp", "exprValue"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, "'/='", "'*='", "'%='", "'+='", 
		"'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", null, "'{'", "'}'", 
		"'++'", "'--'", "'*'", "'/'", "'%'", "'+'", "'-'", "'('", "')'", "'.'", 
		"','", "'!='", "'!'", "'~'", "'<<'", "'>>'", "'<'", "'<='", "'>'", "'>='", 
		"'=='", "'&&'", "'||'", "'&'", "'|'", "'^'", "'='", "':'", "';'", "'var'", 
		"'if'", "'switch'", "'case'", "'while'", "'do'", "'for'", "'foreach'", 
		"'in'", "'break'", "'continue'", "'return'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "OPEN", "TEXT", "CLOSE", "INTEGER", "FLOAT", "BOOL", "SET_DIV", 
		"SET_MUL", "SET_MOD", "SET_ADD", "SET_SUB", "SET_SHIFTL", "SET_SHIFTR", 
		"SET_BIT_AND", "SET_BIT_XOR", "SET_BIT_OR", "STRING", "BRACE_L", "BRACE_R", 
		"INCREMENT", "DECREMENT", "MUL", "DIV", "MOD", "ADD", "SUB", "PARENTHESES_L", 
		"PARENTHESES_R", "DOT", "COMMA", "NOTEQUAL", "LOGIC_NOT", "BIT_INVERT", 
		"SHIFTL", "SHIFTR", "LESS", "LESSEQUAL", "GREATER", "GREATEREQUAL", "EQUAL", 
		"LOGIC_AND", "LOGIC_OR", "BIT_AND", "BIT_OR", "BIT_XOR", "SET", "COLON", 
		"SEMICOLON", "VAR", "IF", "SWITCH", "CASE", "WHILE", "DO", "FOR", "FOREACH", 
		"IN", "BREAK", "CONTINUE", "RETURN", "IDENT", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TemplateParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static TemplateParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TemplateParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TemplateParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class DocumentContext : ParserRuleContext {
		public CodeContext[] code() {
			return GetRuleContexts<CodeContext>();
		}
		public CodeContext code(int i) {
			return GetRuleContext<CodeContext>(i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.EnterDocument(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.ExitDocument(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITemplateParserVisitor<TResult> typedVisitor = visitor as ITemplateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 31;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << INTEGER) | (1L << FLOAT) | (1L << BOOL) | (1L << STRING) | (1L << INCREMENT) | (1L << DECREMENT) | (1L << SUB) | (1L << PARENTHESES_L) | (1L << LOGIC_NOT) | (1L << BIT_INVERT) | (1L << VAR) | (1L << IF) | (1L << SWITCH) | (1L << WHILE) | (1L << DO) | (1L << FOR) | (1L << FOREACH) | (1L << BREAK) | (1L << CONTINUE) | (1L << RETURN) | (1L << IDENT))) != 0)) {
				{
				{
				State = 28; code();
				}
				}
				State = 33;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CodeContext : ParserRuleContext {
		public VarContext var() {
			return GetRuleContext<VarContext>(0);
		}
		public IfContext @if() {
			return GetRuleContext<IfContext>(0);
		}
		public SwitchContext @switch() {
			return GetRuleContext<SwitchContext>(0);
		}
		public WhileContext @while() {
			return GetRuleContext<WhileContext>(0);
		}
		public DowhileContext dowhile() {
			return GetRuleContext<DowhileContext>(0);
		}
		public ForContext @for() {
			return GetRuleContext<ForContext>(0);
		}
		public ForeachContext @foreach() {
			return GetRuleContext<ForeachContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public TextContext text() {
			return GetRuleContext<TextContext>(0);
		}
		public ITerminalNode BREAK() { return GetToken(TemplateParser.BREAK, 0); }
		public ITerminalNode CONTINUE() { return GetToken(TemplateParser.CONTINUE, 0); }
		public ITerminalNode RETURN() { return GetToken(TemplateParser.RETURN, 0); }
		public CodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_code; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.EnterCode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.ExitCode(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITemplateParserVisitor<TResult> typedVisitor = visitor as ITemplateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodeContext code() {
		CodeContext _localctx = new CodeContext(Context, State);
		EnterRule(_localctx, 2, RULE_code);
		try {
			State = 46;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case VAR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 34; var();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 2);
				{
				State = 35; @if();
				}
				break;
			case SWITCH:
				EnterOuterAlt(_localctx, 3);
				{
				State = 36; @switch();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 4);
				{
				State = 37; @while();
				}
				break;
			case DO:
				EnterOuterAlt(_localctx, 5);
				{
				State = 38; dowhile();
				}
				break;
			case FOR:
				EnterOuterAlt(_localctx, 6);
				{
				State = 39; @for();
				}
				break;
			case FOREACH:
				EnterOuterAlt(_localctx, 7);
				{
				State = 40; @foreach();
				}
				break;
			case INTEGER:
			case FLOAT:
			case BOOL:
			case STRING:
			case INCREMENT:
			case DECREMENT:
			case SUB:
			case PARENTHESES_L:
			case LOGIC_NOT:
			case BIT_INVERT:
			case IDENT:
				EnterOuterAlt(_localctx, 8);
				{
				State = 41; expr(0);
				}
				break;
			case TEXT:
				EnterOuterAlt(_localctx, 9);
				{
				State = 42; text();
				}
				break;
			case BREAK:
				EnterOuterAlt(_localctx, 10);
				{
				State = 43; Match(BREAK);
				}
				break;
			case CONTINUE:
				EnterOuterAlt(_localctx, 11);
				{
				State = 44; Match(CONTINUE);
				}
				break;
			case RETURN:
				EnterOuterAlt(_localctx, 12);
				{
				State = 45; Match(RETURN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextContext : ParserRuleContext {
		public ITerminalNode TEXT() { return GetToken(TemplateParser.TEXT, 0); }
		public TextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_text; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.EnterText(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.ExitText(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITemplateParserVisitor<TResult> typedVisitor = visitor as ITemplateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextContext text() {
		TextContext _localctx = new TextContext(Context, State);
		EnterRule(_localctx, 4, RULE_text);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; Match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarContext : ParserRuleContext {
		public IToken keyword;
		public IToken key;
		public ITerminalNode SEMICOLON() { return GetToken(TemplateParser.SEMICOLON, 0); }
		public ITerminalNode VAR() { return GetToken(TemplateParser.VAR, 0); }
		public ITerminalNode IDENT() { return GetToken(TemplateParser.IDENT, 0); }
		public ITerminalNode EQUAL() { return GetToken(TemplateParser.EQUAL, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public VarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.EnterVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.ExitVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITemplateParserVisitor<TResult> typedVisitor = visitor as ITemplateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarContext var() {
		VarContext _localctx = new VarContext(Context, State);
		EnterRule(_localctx, 6, RULE_var);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50; _localctx.keyword = Match(VAR);
			State = 51; _localctx.key = Match(IDENT);
			State = 54;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EQUAL) {
				{
				State = 52; Match(EQUAL);
				State = 53; expr(0);
				}
			}

			State = 56; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfContext : ParserRuleContext {
		public IToken keyword;
		public ExprContext condition;
		public ITerminalNode PARENTHESES_L() { return GetToken(TemplateParser.PARENTHESES_L, 0); }
		public ITerminalNode PARENTHESES_R() { return GetToken(TemplateParser.PARENTHESES_R, 0); }
		public ITerminalNode BRACE_L() { return GetToken(TemplateParser.BRACE_L, 0); }
		public ITerminalNode BRACE_R() { return GetToken(TemplateParser.BRACE_R, 0); }
		public ITerminalNode IF() { return GetToken(TemplateParser.IF, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public CodeContext[] code() {
			return GetRuleContexts<CodeContext>();
		}
		public CodeContext code(int i) {
			return GetRuleContext<CodeContext>(i);
		}
		public IfContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.EnterIf(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.ExitIf(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITemplateParserVisitor<TResult> typedVisitor = visitor as ITemplateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfContext @if() {
		IfContext _localctx = new IfContext(Context, State);
		EnterRule(_localctx, 8, RULE_if);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58; _localctx.keyword = Match(IF);
			State = 59; Match(PARENTHESES_L);
			State = 60; _localctx.condition = expr(0);
			State = 61; Match(PARENTHESES_R);
			State = 62; Match(BRACE_L);
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << INTEGER) | (1L << FLOAT) | (1L << BOOL) | (1L << STRING) | (1L << INCREMENT) | (1L << DECREMENT) | (1L << SUB) | (1L << PARENTHESES_L) | (1L << LOGIC_NOT) | (1L << BIT_INVERT) | (1L << VAR) | (1L << IF) | (1L << SWITCH) | (1L << WHILE) | (1L << DO) | (1L << FOR) | (1L << FOREACH) | (1L << BREAK) | (1L << CONTINUE) | (1L << RETURN) | (1L << IDENT))) != 0)) {
				{
				{
				State = 63; code();
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 69; Match(BRACE_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SwitchContext : ParserRuleContext {
		public IToken keywordA;
		public ExprContext condition;
		public IToken _CASE;
		public IList<IToken> _keywordB = new List<IToken>();
		public ITerminalNode PARENTHESES_L() { return GetToken(TemplateParser.PARENTHESES_L, 0); }
		public ITerminalNode PARENTHESES_R() { return GetToken(TemplateParser.PARENTHESES_R, 0); }
		public ITerminalNode BRACE_L() { return GetToken(TemplateParser.BRACE_L, 0); }
		public ITerminalNode BRACE_R() { return GetToken(TemplateParser.BRACE_R, 0); }
		public ITerminalNode SWITCH() { return GetToken(TemplateParser.SWITCH, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode[] COLON() { return GetTokens(TemplateParser.COLON); }
		public ITerminalNode COLON(int i) {
			return GetToken(TemplateParser.COLON, i);
		}
		public ITerminalNode[] CASE() { return GetTokens(TemplateParser.CASE); }
		public ITerminalNode CASE(int i) {
			return GetToken(TemplateParser.CASE, i);
		}
		public ITerminalNode[] BREAK() { return GetTokens(TemplateParser.BREAK); }
		public ITerminalNode BREAK(int i) {
			return GetToken(TemplateParser.BREAK, i);
		}
		public SwitchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_switch; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.EnterSwitch(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.ExitSwitch(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITemplateParserVisitor<TResult> typedVisitor = visitor as ITemplateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwitch(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SwitchContext @switch() {
		SwitchContext _localctx = new SwitchContext(Context, State);
		EnterRule(_localctx, 10, RULE_switch);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71; _localctx.keywordA = Match(SWITCH);
			State = 72; Match(PARENTHESES_L);
			State = 73; _localctx.condition = expr(0);
			State = 74; Match(PARENTHESES_R);
			State = 75; Match(BRACE_L);
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==CASE) {
				{
				{
				State = 76; _localctx._CASE = Match(CASE);
				_localctx._keywordB.Add(_localctx._CASE);
				State = 77; expr(0);
				State = 78; Match(COLON);
				State = 79; expr(0);
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==BREAK) {
					{
					State = 80; Match(BREAK);
					}
				}

				}
				}
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 88; Match(BRACE_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileContext : ParserRuleContext {
		public IToken keyword;
		public ExprContext condition;
		public ITerminalNode PARENTHESES_L() { return GetToken(TemplateParser.PARENTHESES_L, 0); }
		public ITerminalNode PARENTHESES_R() { return GetToken(TemplateParser.PARENTHESES_R, 0); }
		public ITerminalNode BRACE_L() { return GetToken(TemplateParser.BRACE_L, 0); }
		public ITerminalNode BRACE_R() { return GetToken(TemplateParser.BRACE_R, 0); }
		public ITerminalNode WHILE() { return GetToken(TemplateParser.WHILE, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public CodeContext[] code() {
			return GetRuleContexts<CodeContext>();
		}
		public CodeContext code(int i) {
			return GetRuleContext<CodeContext>(i);
		}
		public WhileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_while; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.EnterWhile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.ExitWhile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITemplateParserVisitor<TResult> typedVisitor = visitor as ITemplateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileContext @while() {
		WhileContext _localctx = new WhileContext(Context, State);
		EnterRule(_localctx, 12, RULE_while);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; _localctx.keyword = Match(WHILE);
			State = 91; Match(PARENTHESES_L);
			State = 92; _localctx.condition = expr(0);
			State = 93; Match(PARENTHESES_R);
			State = 94; Match(BRACE_L);
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << INTEGER) | (1L << FLOAT) | (1L << BOOL) | (1L << STRING) | (1L << INCREMENT) | (1L << DECREMENT) | (1L << SUB) | (1L << PARENTHESES_L) | (1L << LOGIC_NOT) | (1L << BIT_INVERT) | (1L << VAR) | (1L << IF) | (1L << SWITCH) | (1L << WHILE) | (1L << DO) | (1L << FOR) | (1L << FOREACH) | (1L << BREAK) | (1L << CONTINUE) | (1L << RETURN) | (1L << IDENT))) != 0)) {
				{
				{
				State = 95; code();
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 101; Match(BRACE_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DowhileContext : ParserRuleContext {
		public IToken keywordA;
		public IToken keywordB;
		public ExprContext condition;
		public ITerminalNode BRACE_L() { return GetToken(TemplateParser.BRACE_L, 0); }
		public ITerminalNode BRACE_R() { return GetToken(TemplateParser.BRACE_R, 0); }
		public ITerminalNode PARENTHESES_L() { return GetToken(TemplateParser.PARENTHESES_L, 0); }
		public ITerminalNode PARENTHESES_R() { return GetToken(TemplateParser.PARENTHESES_R, 0); }
		public ITerminalNode DO() { return GetToken(TemplateParser.DO, 0); }
		public ITerminalNode WHILE() { return GetToken(TemplateParser.WHILE, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public CodeContext[] code() {
			return GetRuleContexts<CodeContext>();
		}
		public CodeContext code(int i) {
			return GetRuleContext<CodeContext>(i);
		}
		public DowhileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dowhile; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.EnterDowhile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITemplateParserListener typedListener = listener as ITemplateParserListener;
			if (typedListener != null) typedListener.ExitDowhile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITemplateParserVisitor<TResult> typedVisitor = visitor as ITemplateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDowhile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DowhileContext dowhile() {
		DowhileContext _localctx = new DowhileContext(Context, State);
		EnterRule(_localctx, 14, RULE_dowhile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; _localctx.keywordA = Match(DO);
			State = 104; Match(BRACE_L);
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << INTEGER) | (1L << FLOAT) | (1L << BOOL) | (1L << STRING) | (1L << INCREMENT) | (1L << DECREMENT) | (1L << SUB) | (1L << PARENTHESES_L) | (1L << LOGIC_NOT) | (1L << BIT_INVERT) | (1L << VAR) | (1L << IF) | (1L << SWITCH) | (1L << WHILE) | (1L << DO) | (1L << FOR) | (1L << FOREACH) | (1L << BREAK) | (1L << CONTINUE) | (1L << RETURN) | (1L << IDENT))) != 0)) {
				{
				{
				State = 105; code();
				}
				}
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 111; Match(BRACE_R);
			State = 112; _localctx.keywordB = Match(WHILE);
			State = 113; Match(PARENTHESES_L);
			State = 114; _localctx.condition = expr(0);
			State = 115; Match(PARENTHESES_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
